--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.10.3"
   },
   "scripts": {
